Update contact page styling and add preview functionality

--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -27,8 +27,8 @@
     ]
   },
   "contact": {
-    "title": "お問い合わせ",
-    "subtitle": "次のビッグアイデアのデバッグ準備はできていますか？ご連絡をお待ちしています！",
+    "title": "CONTACT",
+    "subtitle": "次のデバッグ準備はできていますか？ご連絡をお待ちしています！",
     "form": {
       "name": "お名前",
       "email": "メールアドレス",
