送信ボタンを追加

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -32,7 +32,8 @@
     "form": {
       "name": "Name",
       "email": "E-mail",
-      "comment": "Comment"
+      "comment": "Comment",
+      "submit": "Send Message"
     }
   },
   "footer": {
