送信設定の修正

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -33,7 +33,10 @@
       "name": "Name",
       "email": "E-mail",
       "comment": "Comment",
-      "submit": "Send Message"
+      "submit": "Send Message",
+      "success": "Message sent successfully",
+      "error": "Failed to send message",
+      "sending": "Sending..."
     }
   },
   "footer": {
