--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -33,7 +33,10 @@
       "name": "お名前",
       "email": "メールアドレス",
       "comment": "コメント",
-      "submit": "送信する"
+      "submit": "送信する",
+      "success": "メッセージが送信されました",
+      "error": "送信に失敗しました",
+      "sending": "送信中..."
     }
   },
   "footer": {
